--- a/scene/one/book-of-ella-2/index.html
+++ b/scene/one/book-of-ella-2/index.html
@@ -54,7 +54,7 @@
 
       </div>
 
-      <img alt="Calvin and Hobbes &ndash; snow art." src="https://animathabitat.com/inc/img/~01/comic/~bill-watterson/calvin-and-hobbes.snow-art.1.jpg" />
+      <img alt="Calvin and Hobbes &ndash; snow art." src="https://img.animathabitat.org/01/comic/~bill-watterson/calvin-and-hobbes.snow-art.1.jpg" />
       <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div>
@@ -67,7 +67,7 @@
 
       </div>
 
-      <img alt="Calvin and Hobbes &ndash; snow art." src="https://animathabitat.com/inc/img/~01/comic/~bill-watterson/calvin-and-hobbes.snow-art.eggplant.jpg" />
+      <img alt="Calvin and Hobbes &ndash; snow art." src="https://img.animathabitat.org/01/comic/~bill-watterson/calvin-and-hobbes.snow-art.eggplant.jpg" />
       <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div>
@@ -85,7 +85,7 @@
         <p><b class="color">&ldquo;</b>To deal with the capture or encapsulation of these events in the flow of the narrative, they must be broken into sequenced segments. These segments are called panels or frames. They do not correspond exactly to cinematic frames. They are part of the creative process, rather than a result of the technology. [&hellip;] The task then is to arrange the sequence of events (or pictures) so as to bridge the gaps in action. Given these, the reader may fill in the intervening events from experience. [The panel] is used by the artist to capture or freeze one segment in what is in reality an uninterrupted flow of action. [&hellip;] It is in this encapsulation that the artist employs the skill of narration. The rendering of elements within a frame, the arrangement of the images therein and their relation to and association with the other images in the sequence are the basic grammar from which the narrative is constructed.<b class="color">&rdquo;</b><font class="color"> &mdash;&nbsp;Will Eisner. (2008) <i>Comics and Sequential Art: Principles and Practices from the Legendary Cartoonist</i>, p&nbsp;39 - 40. W. W. Norton &amp; Co. Inc.</font></p>
       </div> -->
 
-      <img alt="Calvin and Hobbes &ndash; snow art." src="https://animathabitat.com/inc/img/~01/comic/~bill-watterson/calvin-and-hobbes.snow-art.2.jpg" />
+      <img alt="Calvin and Hobbes &ndash; snow art." src="https://img.animathabitat.org/01/comic/~bill-watterson/calvin-and-hobbes.snow-art.2.jpg" />
       <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div>
@@ -98,7 +98,7 @@
 
       </div>
 
-      <img alt="Tomb of Menna" src="https://animathabitat.com/inc/img/~01/comic/tomb-of-menna.eastwall.jpg" />
+      <img alt="Tomb of Menna" src="https://img.animathabitat.org/01/comic/tomb-of-menna.eastwall.jpg" />
       <p class="gutter-side text-right">Tomb of Menna &ndash; Ancient Egypt</p>
 
       <div>
@@ -120,7 +120,7 @@
 
       </div>
 
-      <img alt="Calvin and Hobbes &ndash; snow art." src="https://animathabitat.com/inc/img/~01/comic/~bill-watterson/calvin-and-hobbes.snow-art.3.jpg" />
+      <img alt="Calvin and Hobbes &ndash; snow art." src="https://img.animathabitat.org/01/comic/~bill-watterson/calvin-and-hobbes.snow-art.3.jpg" />
       <p class="gutter-side text-right"><i>Calvin and Hobbes</i> (November 1985 - December 1995) &copy; Bill Watterson [<a class="button" onclick="fn();" title="Calvin and Hobbes">1</a>]</p>
 
       <div class="clear">
@@ -143,12 +143,12 @@
 
       <div class="clear diptych ptych-fixed">
         <div class="clear ptych-left">
-          <img alt="Bottom of the Ninth (2012) p.10 &copy; Ryan Woodward" src="https://animathabitat.com/inc/img/~01/comic/~ryan-woodward/bottom-of-the-ninth-p.10.png" />
+          <img alt="Bottom of the Ninth (2012) p.10 &copy; Ryan Woodward" src="https://img.animathabitat.org/01/comic/~ryan-woodward/bottom-of-the-ninth-p.10.png" />
 
         </div>
 
         <div class="clear ptych-right">
-          <img alt="Bottom of the Ninth (2012) p.11 &copy; Ryan Woodward" src="https://animathabitat.com/inc/img/~01/comic/~ryan-woodward/bottom-of-the-ninth-p.11.png" />
+          <img alt="Bottom of the Ninth (2012) p.11 &copy; Ryan Woodward" src="https://img.animathabitat.org/01/comic/~ryan-woodward/bottom-of-the-ninth-p.11.png" />
 
         </div>
 
@@ -163,7 +163,7 @@
       </div>
 
       <div class="clear">
-        <img alt="Device 6 &ndash; screen 05. (2013) &copy; Simogo" src="https://animathabitat.com/inc/img/~01/comic/~simogo/device-6.screen.5.jpg" />
+        <img alt="Device 6 &ndash; screen 05. (2013) &copy; Simogo" src="https://img.animathabitat.org/01/comic/~simogo/device-6.screen.5.jpg" />
         <p class="gutter-side text-right"><i>Device 6</i> screen-05 (2013) &copy; Simon Flesser [<a href="../../../url/www/simogo-device-6/" rel="noopener" target="_blank" title="Simon Flesser / Device 6">simogo.com</a>]</p>
 
       </div>
