--- a/scene/one/book-of-ella-3/index.html
+++ b/scene/one/book-of-ella-3/index.html
@@ -58,17 +58,17 @@
 
       <div class="clear triptych ptych-fixed">
         <div class="clear-left ptych-left">
-          <img alt="Daytripper (2010) Ch.1 &copy; Fabio Moon, Gabriel Ba" src="https://animathabitat.com/inc/img/~01/comic/~fabio-moon-gabriel-ba/daytripper-ch.1.jpg" />
+          <img alt="Daytripper (2010) Ch.1 &copy; Fabio Moon, Gabriel Ba" src="https://img.animathabitat.org/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.1.jpg" />
 
         </div>
 
         <div class="clear-center ptych-center">
-          <img alt="Daytripper (2010) Ch.2 &copy; Fabio Moon, Gabriel Ba" src="https://animathabitat.com/inc/img/~01/comic/~fabio-moon-gabriel-ba/daytripper-ch.2.jpg" />
+          <img alt="Daytripper (2010) Ch.2 &copy; Fabio Moon, Gabriel Ba" src="https://img.animathabitat.org/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.2.jpg" />
 
         </div>
 
         <div class="clear-right ptych-right">
-          <img alt="Daytripper (2010) Ch.3 &copy; Fabio Moon, Gabriel Ba" src="https://animathabitat.com/inc/img/~01/comic/~fabio-moon-gabriel-ba/daytripper-ch.3.jpg" />
+          <img alt="Daytripper (2010) Ch.3 &copy; Fabio Moon, Gabriel Ba" src="https://img.animathabitat.org/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.3.jpg" />
 
         </div>
 
@@ -82,12 +82,12 @@
 
       <div class="clear diptych ptych-fixed">
         <div class="clear ptych-left">
-          <img alt="Daytripper (2010) p.83 &copy; Fabio Moon, Gabriel Ba" src="https://animathabitat.com/inc/img/~01/comic/~fabio-moon-gabriel-ba/daytripper-p.83.jpg" />
+          <img alt="Daytripper (2010) p.83 &copy; Fabio Moon, Gabriel Ba" src="https://img.animathabitat.org/01/comic/~fabio-moon-gabriel-ba/daytripper-p.83.jpg" />
 
         </div>
 
         <div class="clear ptych-right">
-          <img alt="Daytripper (2010) p.84 &copy; Fabio Moon, Gabriel Ba" src="https://animathabitat.com/inc/img/~01/comic/~fabio-moon-gabriel-ba/daytripper-p.84.jpg" />
+          <img alt="Daytripper (2010) p.84 &copy; Fabio Moon, Gabriel Ba" src="https://img.animathabitat.org/01/comic/~fabio-moon-gabriel-ba/daytripper-p.84.jpg" />
 
         </div>
 
@@ -107,17 +107,17 @@
 
       <div class="clear triptych ptych-fixed">
         <div class="clear-left ptych-left">
-          <img alt="Daytripper (2010) Ch.4 &copy; Fabio Moon, Gabriel Ba" src="https://animathabitat.com/inc/img/~01/comic/~fabio-moon-gabriel-ba/daytripper-ch.4.jpg" />
+          <img alt="Daytripper (2010) Ch.4 &copy; Fabio Moon, Gabriel Ba" src="https://img.animathabitat.org/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.4.jpg" />
 
         </div>
 
         <div class="clear-center ptych-center">
-          <img alt="Daytripper (2010) Ch.6 &copy; Fabio Moon, Gabriel Ba" src="https://animathabitat.com/inc/img/~01/comic/~fabio-moon-gabriel-ba/daytripper-ch.6.jpg" />
+          <img alt="Daytripper (2010) Ch.6 &copy; Fabio Moon, Gabriel Ba" src="https://img.animathabitat.org/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.6.jpg" />
 
         </div>
 
         <div class="clear-right ptych-right">
-          <img alt="Daytripper (2010) Ch.8 &copy; Fabio Moon, Gabriel Ba" src="https://animathabitat.com/inc/img/~01/comic/~fabio-moon-gabriel-ba/daytripper-ch.8.jpg" />
+          <img alt="Daytripper (2010) Ch.8 &copy; Fabio Moon, Gabriel Ba" src="https://img.animathabitat.org/01/comic/~fabio-moon-gabriel-ba/daytripper-ch.8.jpg" />
 
         </div>
 
@@ -134,7 +134,7 @@
 
       </div>
 
-      <img alt="Buz Sawyer &ndash; (January 16, 1978) &copy; Roy Crane" src="https://animathabitat.com/inc/img/~01/comic/~roy-crane/buz-sawyer.1978.01.16.jpg" />
+      <img alt="Buz Sawyer &ndash; (January 16, 1978) &copy; Roy Crane" src="https://img.animathabitat.org/01/comic/~roy-crane/buz-sawyer.1978.01.16.jpg" />
       <p class="gutter-side text-right"><i>Buz Sawyer</i> (January 16, 1978) &copy; Roy Crane</p>
 
       <div>
@@ -160,7 +160,7 @@
 
       </div>
 
-      <img alt="Garfield &ndash; (February 19, 2009) &copy; Jim Davis" src="https://animathabitat.com/inc/img/~01/comic/~jim-davis/garfield.2009.02.19.gif" />
+      <img alt="Garfield &ndash; (February 19, 2009) &copy; Jim Davis" src="https://img.animathabitat.org/01/comic/~jim-davis/garfield.2009.02.19.gif" />
       <p class="gutter-side text-right lineend"><i>Garfield</i> (February 19, 2009) &copy; Jim Davis [<a href="../../../url/www/garfield/" rel="noopener" target="_blank" title="Jim Davis / Garfield">garfield.com</a>]</p>
 
       <div class="clear">
