--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/2016.kenya.ivory-pile.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/2016.kenya.ivory-pile.jpg" />
         <p class="text-right gutter-side">&lsquo;KWS ranger stands guard in Nairobi National Park&rsquo;, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       </div>
@@ -66,7 +66,7 @@
 
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/2016.kenya.ivory-burn.jpg" />
+      <img alt="" src="https://img.animathabitat.org/01/photo/2016.kenya.ivory-burn.jpg" />
       <p class="text-right gutter-side">&lsquo;Ivory set on fire in Nairobi National Park&rsquo;, Kenya, 2016 &copy; AP / Ben Curtis [<a href="../../../url/www/bencurtis/" rel="noopener" target="_blank" title="Ben Curtis">bencurtis.org</a>]</p>
 
       <div>
@@ -167,7 +167,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/logo/hands-off.png" />
+        <img alt="" src="https://img.animathabitat.org/01/logo/hands-off.png" />
         <p class="gutter-side text-right">Hands Off Our Elephants &copy; Wildlife Direct [<a href="../../../url/-org/wildlifedirect-hands-off-our-elephants/" rel="noopener" target="_blank" title="Wildlife Direct / Hands Off Our Elephants">wildlifedirect.org</a>, recolored]</p>
 
       </div>
