--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/art/oatley.artcast.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/art/oatley.artcast.jpg" />
         <p class="text-right gutter-side"><i>Artcast</i> (2008) &copy; Visual Voice [<a href="../../../url/www/chrisoatley-podcasts/" rel="noopener" target="_blank" title="Chris Oatley / Artcast">chrisoatley.com</a>]</p>
       </div>
 
@@ -83,7 +83,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/art/woodward.bottom-of-the-ninth.png" /></a>
+        <img alt="" src="https://img.animathabitat.org/01/art/woodward.bottom-of-the-ninth.png" /></a>
         <p class="text-right gutter-side"><i>Bottom of the Ninth</i> (2012) &copy; Ryan Woodward [<a title="Ryan Woodward / Bottom of the Ninth" href="../../../url/www/ryanwoodwardart-bottom-of-the-ninth/" target="_blank" rel="noopener">ryanwoodwardart.com</a>]</p>
       </div>
 
@@ -94,7 +94,7 @@
 
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~01/art/~disney-animation/disney.the-lion-king.open.jpg" />
+      <img alt="" src="https://img.animathabitat.org/01/art/~disney-animation/disney.the-lion-king.open.jpg" />
       <p class="text-right gutter-side"><i>The Lion King</i> (1994) &copy; Disney</p>
 
       <div>
@@ -105,7 +105,7 @@
 
       <div class="quote clear-top clear-bottom">
         <div class="quote clear-top clear-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~01/art/disney.living-desert-vanishing-prairie.jpg" />
+            <img alt="" src="https://img.animathabitat.org/01/art/disney.living-desert-vanishing-prairie.jpg" />
             <p class="text-right"><i>The Living Desert, The Vanishing Prairie</i> (1971) &copy; Disney</p>
 
             <!-- [ca.movieposter.com/q/Living+Desert/Vanishing+Prairie_posters.html] -->
@@ -118,7 +118,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/art/~heinrich-kley/kley.elephant-dance.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/art/~heinrich-kley/kley.elephant-dance.jpg" />
         <p class="text-right gutter-side"><i>The Drawings of Heinrich Kley</i> (1909, republished 1961), 52.</p>
 
       </div>
