--- a/scene/one/wildlife-documentary-lens/index.html
+++ b/scene/one/wildlife-documentary-lens/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.4.deserts.p04h64ds.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.4.deserts.p04h64ds.jpg" />
         <p class="text-right gutter-side">&lsquo;Namibia's arid gravel plains are so incredibly hot that rain often evaporates before it hits the ground.&rsquo; Namibia &ndash; <i>Planet Earth II</i> e/4: &lsquo;Deserts&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
@@ -95,7 +95,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.2.mountains.p04fglxx.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.2.mountains.p04fglxx.jpg" />
         <p class="text-right gutter-side">&lsquo;There may be as few as 3,500 snow leopards left in the wild.&rsquo; Hemis National Park, India &ndash; <i>Planet Earth II</i> e/2: &lsquo;Mountains&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
@@ -189,7 +189,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.5.grasslands.p04jjbqm.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.5.grasslands.p04jjbqm.jpg" />
         <p class="text-right gutter-side">&lsquo;An African bull elephant swishes his trunk at the carmine bee-eaters following him through the grassland.&rsquo; Botswana &ndash; <i>Planet Earth II</i> e/5: &lsquo;Grasslands&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
@@ -205,7 +205,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.6.cities.p04k7z08.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.6.cities.p04k7z08.jpg" />
         <p class="text-right gutter-side">&lsquo;Mark MacEwen filming the macaques.&rsquo; Jaipur, India &ndash; <i>Planet Earth II</i> e/6: &lsquo;Cities&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
@@ -273,7 +273,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.1.islands.p04dg9p0.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~british-broadcasting-corporation/bbc.planet-earth-ii.1.islands.p04dg9p0.jpg" />
         <p class="text-right gutter-side">&lsquo;Marine iguanas basking in the sun.&rsquo; Fernandina Island, Galapagos &ndash; <i>Planet Earth II</i> e/1: &lsquo;Islands&rsquo; &copy; 2016 BBC Earth [<a href="../../../url/-co-uk/bbc-programmes-p02544td/" rel="noopener" target="_blank" title="BBC / Planet Earth II">bbc.co.uk</a>]</p>
 
       </div>
