--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="clear">
-        <img alt="VIRUNGA title" src="https://animathabitat.com/inc/img/~01/title/virunga.ttl3.jpg" />
+        <img alt="VIRUNGA title" src="https://img.animathabitat.org/01/title/virunga.ttl3.jpg" />
         <p class="text-right gutter-side"><i>Virunga</i> title lettering &copy; Grain Media [<a href="../../../url/-org/virunga/" title="Virunga National Park" target="_blank" rel="noopener">virunga.org</a>]</p>
 
       </div>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="clear">
-        <img alt="Before the Flood banner" src="https://animathabitat.com/inc/img/~01/title/national-geographic.before-the-flood.banner.jpg" />
+        <img alt="Before the Flood banner" src="https://img.animathabitat.org/01/title/national-geographic.before-the-flood.banner.jpg" />
         <p class="text-right gutter-side"><i>Before the Flood</i> title image &copy; National Geographic Documentary Films [<a href="../../../url/-com/beforetheflood/" title="Before the Flood (documentary film, 2016)" target="_blank" rel="noopener">beforetheflood.com</a>]</p>
 
       </div>
@@ -214,7 +214,7 @@
       </div>
 
       <div class="clear">
-        <img alt="The Ivory Game lockup" src="https://animathabitat.com/inc/img/~01/title/netflix.the-ivory-game.lockup.png" />
+        <img alt="The Ivory Game lockup" src="https://img.animathabitat.org/01/title/netflix.the-ivory-game.lockup.png" />
         <p class="text-right gutter-side"><i>The Ivory Game</i> lockup &copy; Vulcan Productions [<a href="../../../url/-com/theivorygame/" title="The Ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>]</p>
 
       </div>
