--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -38,7 +38,7 @@
 
   <section>
     <article>
-      <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~elephants-without-borders/ewb.ele-eyes.jpg" />
+      <img alt="" src="https://img.animathabitat.org/01/photo/~elephants-without-borders/ewb.ele-eyes.jpg" />
       <p class="text-right gutter-side">Elephant &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       <div>
@@ -85,7 +85,7 @@
       <br>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/geo/kavango-zambezi.map.color.nm.png" />
+        <img alt="" src="https://img.animathabitat.org/01/geo/kavango-zambezi.map.color.nm.png" />
         <p class="text-right">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area">kavangozambezi.org</a>, edited and recolored]</p>
 
       </div>
@@ -120,7 +120,7 @@
 
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~01/geo/kavango-zambezi.map.information.jpg" />
+      <img alt="" src="https://img.animathabitat.org/01/geo/kavango-zambezi.map.information.jpg" />
       <p class="text-right gutter-side">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi-about/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area / Tourism Without Borders">kavangozambezi.org</a>, recolored]</p>
 
       <div class="clear">
@@ -151,7 +151,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~elephants-without-borders/ewb.okavango.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~elephants-without-borders/ewb.okavango.jpg" />
         <p class="text-right gutter-side">Okavango &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
@@ -214,7 +214,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~elephants-without-borders/ewb.landscape.1024-357.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~elephants-without-borders/ewb.landscape.1024-357.jpg" />
         <p class="text-right gutter-side">Grey Frontiers &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
 
       </div>
