--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/museum-of-natural-history.marseille.elephant-skeleton.recolored.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/museum-of-natural-history.marseille.elephant-skeleton.recolored.jpg" />
         <p class="text-right gutter-side">Elephant skeleton &copy; Museum of Natural History, Marseille [recolored]</p>
 
       </div>
@@ -145,7 +145,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~steve-bloom/bloom.savuti.botswana.003321-SB1.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~steve-bloom/bloom.savuti.botswana.003321-SB1.jpg" />
         <p class="text-right gutter-side">Close-up-of elephants feet disturbing Cape Turtle Doves &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
@@ -170,7 +170,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~sheldrick-wildlife-trust/swt.tsavo-02.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~sheldrick-wildlife-trust/swt.tsavo-02.jpg" />
         <p class="text-right gutter-side">Daphne Sheldrick, Tsavo &copy; SWT [<a href="../../../url/-org/sheldrickwildlifetrust/" target="_blank" title="Sheldrick Wildlife Trust">sheldrickwildlifetrust.org</a>]</p>
 
       </div>
@@ -197,7 +197,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~steve-bloom/bloom.savuti.botswana.002577-SB1.jpg" />
         <p class="text-right gutter-side">Charging bull elephant, Savuti, Botswana &copy; Steve Bloom [<a href="../../../url/-com/stevebloomphoto-elephants/" target="_blank" title="Steve Bloom / Photography / Elephants">stevebloomphoto.com</a>]</p>
 
       </div>
