--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -233,10 +233,10 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~brent-stirton/stirton.2013.chad.ivory-18.2048.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~brent-stirton/stirton.2013.chad.ivory-18.2048.jpg" />
         <p class="text-right gutter-side">Zakouma National Park, Chad &copy; Brent Stirton [<a href="../../../url/nationalgeographic/tracking-ivory/" title="National Geographic / How Killing Elephants Finances Terror in Africa" target="_blank" rel="noopener">nationalgeographic.com</a>]</p>
 
-        <!-- <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~brent-stirton/stirton.2015.chad.ivory-wars.001.jpg" />
+        <!-- <img alt="" src="https://img.animathabitat.org/01/photo/~brent-stirton/stirton.2015.chad.ivory-wars.001.jpg" />
         <p class="text-right gutter-side">&lsquo;Ivory Wars&rsquo;, Zakouma National Park, Chad &copy; Brent Stirton [brentstirton.com]</p> -->
 
       </div>
