--- a/scene/one/history-of-elephants/index.html
+++ b/scene/one/history-of-elephants/index.html
@@ -140,7 +140,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~british-broadcasting-corporation/bbc.earths-greatest-spectacles.3.okavango.jpg" />
+        <img alt="" src="https://img.animathabitat.org/01/photo/~british-broadcasting-corporation/bbc.earths-greatest-spectacles.3.okavango.jpg" />
         <p class="text-right gutter-side"><i>Earth's Greatest Spectacles</i> (2016), e/3: &ldquo;Okavango&rdquo; &copy BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
 
       </div>
