--- a/scene/one/making-of-ella/index.html
+++ b/scene/one/making-of-ella/index.html
@@ -39,7 +39,7 @@
   <section>
     <article>
 
-      <img alt="Okavango Delta, Botswana [Landsat 8 Map] (2017) &copy; Descartes Labs" src="https://animathabitat.com/inc/img/~01/geo/africa-okavango.jpg" />
+      <img alt="Okavango Delta, Botswana [Landsat 8 Map] (2017) &copy; Descartes Labs" src="https://img.animathabitat.org/01/geo/africa-okavango.jpg" />
       <p class="text-right gutter-side">Okavango Delta, Botswana. <i>Landsat 8 Map</i> &copy; Descartes Labs</p>
 
       <div>
