--- a/scene/one/wildlife-documentary-2/index.html
+++ b/scene/one/wildlife-documentary-2/index.html
@@ -57,7 +57,7 @@
       </div>
 
       <div class="clear">
-        <img alt="The Elephant Queen key art (16 by 9)" src="https://animathabitat.com/inc/img/~01/title/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
+        <img alt="The Elephant Queen key art (16 by 9)" src="https://img.animathabitat.org/01/title/apple-tv.the-elephant-queen.key-art.16-9.jpg" />
         <p class="text-right gutter-side"><i>The Elephant Queen</i> (2018) &copy; Apple TV Plus [<a href="../../../url/-com/theelephantqueen/" title="The Elephant Queen" target="_blank" rel="noopener">theelephantqueen.com</a>]</p>
 
       </div>
@@ -120,7 +120,7 @@
       </div>
 
       <div class="clear">
-        <img alt="Into the Okavango title" src="https://animathabitat.com/inc/img/~01/title/national-geographic.into-the-okavango.banner.jpg" />
+        <img alt="Into the Okavango title" src="https://img.animathabitat.org/01/title/national-geographic.into-the-okavango.banner.jpg" />
         <p class="text-right gutter-side"><i>Into the Okavango</i> (2018) &copy; National Geographic Documentary Films [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" title="Into the Okavango (documentary film, 2018)" target="_blank" rel="noopener">films.nationalgeographic.com</a>]</p>
 
       </div>
