--- a/scene/two/history-of-forests-trees/index.html
+++ b/scene/two/history-of-forests-trees/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/art/andrew-wyeth/2002.wyeth.the-carry.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/art/andrew-wyeth/2002.wyeth.the-carry.jpg" />
         <p class="text-right gutter-side"><i>The Carry</i> (2002) &copy; Andrew Wyeth [<a href="../../../url/www/andrewwyeth/" rel="noopener" target="_blank" title="Andrew Wyeth">andrewwyeth.com</a>]</p>
 
       </div>
@@ -76,7 +76,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/art/robert-bateman/1981.bateman.above-the-river-trumpeter-swans.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/art/robert-bateman/1981.bateman.above-the-river-trumpeter-swans.jpg" />
         <p class="text-right gutter-side"><i>Above the River &ndash; Trumpeter Swans</i> (1981) &copy; Robert Bateman [<a href="../../../url/com/www/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>]</p>
 
       </div>
@@ -101,13 +101,13 @@
       </div>
 
       <!-- <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/art/clyfford-still/1957.still.ph-48.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/art/clyfford-still/1957.still.ph-48.jpg" />
         <p class="text-right gutter-side lineend"><i>PH-48</i> (oil color, 1957) &copy; Clyfford Still [<a href="../../../url/com//" rel="noopener" target="_blank" title=""></a>]</p>
 
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/art/robert-bateman/1999.bateman.rockface-descent-leopard.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/art/robert-bateman/1999.bateman.rockface-descent-leopard.jpg" />
         <p class="text-right gutter-side"><i>Rockface Decent &ndash; Leopard</i> (acrylic color, 1999) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, recolored]</p>
 
       </div> -->
@@ -140,7 +140,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/art/fan-kuan/kuan.travellers-by-streams-and-mountains.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/art/fan-kuan/kuan.travellers-by-streams-and-mountains.jpg" />
         <p class="text-right gutter-side"><i>Travelers by Stream and Mountains</i>, Song Dynasty (960-1279) by Fan Kuan</p>
 
       </div>
@@ -158,7 +158,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/art/franz-kline/kline.le-gros.1961.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/art/franz-kline/kline.le-gros.1961.jpg" />
         <p class="text-right gutter-side"><i>Le Gros</i> (1961) by Franz Kline [<a href="../../../url/moma/franz-kline/" rel="noopener" target="_blank" title="The Museum of Modern Art / Artist / Franz Kline">moma.org</a>]</p>
 
       </div>
@@ -177,7 +177,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/art/malika-favre/favre.hide-seek.2.png" />
+        <img alt="" src="https://img.animathabitat.org/02/art/malika-favre/favre.hide-seek.2.png" />
         <p class="text-right gutter-side"><i>Hide and Seek</i> (2012) by Malika Favre [<a href="../../../url/com//" rel="noopener" target="_blank" title=""></a>]</p>
 
       </div>
@@ -190,13 +190,13 @@
       <div class="clear diptych">
 
         <div class="clear-bottom">
-          <img alt="" src="https://animathabitat.com/inc/img/~02/art/robert-bateman/1990.bateman.midnight-black-wolf.jpg" />
+          <img alt="" src="https://img.animathabitat.org/02/art/robert-bateman/1990.bateman.midnight-black-wolf.jpg" />
           <p class="text-right"><i>Midnight &ndash; Black Wolf</i> (acrylic color, 1989) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
 
         </div>
 
         <div class="clear-bottom">
-          <img alt="" src="https://animathabitat.com/inc/img/~02/art/robert-bateman/2005.bateman.white-encounter.jpg" />
+          <img alt="" src="https://img.animathabitat.org/02/art/robert-bateman/2005.bateman.white-encounter.jpg" />
           <p class="text-right"><i>White Encounter</i> (acrylic color, 2005) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
 
         </div>
@@ -256,7 +256,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/photo/~kieran-o-donovan/silverback-films.our-planet.8.forests.2019.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/photo/~kieran-o-donovan/silverback-films.our-planet.8.forests.2019.jpg" />
         <p class="text-right gutter-side">&lsquo;Amur tiger caught on camera trap in the boreal forests of Russia's Pacific Coast&rsquo; by Kieran O'Donovan, <i>Our Planet</i> e/8: &lsquo;Forests&rsquo; (2019) &copy; Silverback Films, Netflix [<a href="../../../url/-com/ourplanet/" rel="noopener" target="_blank" title="Our Planet (2019)">ourplanet.com</a>]</p>
 
       </div>
@@ -290,7 +290,7 @@
       </div> -->
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/photo/the-globe-and-mail.canada.boreal-forest.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/photo/the-globe-and-mail.canada.boreal-forest.jpg" />
         <p class="text-right gutter-side">&lsquo;Canada's boreal forest&rsquo;<sup>&nbsp;[<a class="button" onclick="fn_3();" title="Galloway, 2011.">6</a>]</sup></p>
 
       </div>
