--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -57,7 +57,7 @@
 
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~02/type/paratype.rodchenko.002.png" />
+      <img alt="" src="https://img.animathabitat.org/02/type/paratype.rodchenko.002.png" />
       <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, edited and recolored]</p>
 
       <div class="clear-top">
@@ -70,7 +70,7 @@
 
       </div>
 
-      <img alt="" src="https://animathabitat.com/inc/img/~02/type/paratype.rodchenko.001.png" />
+      <img alt="" src="https://img.animathabitat.org/02/type/paratype.rodchenko.001.png" />
       <p class="text-right gutter-side">Rochenko type specimen [<a href="../../../url/com/paratype-rodchenko/" rel="noopener" target="_blank" title="ParaType / Fonts / Rodchenko">paratype.com</a>, recolored]</p>
 
       <div>
