--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -54,17 +54,17 @@
       <div class="clear">
         <div class="clear triptych ptych-fixed">
           <div class="clear-left clear-bottom ptych-left ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.1.jpg" />
+            <img alt="" src="https://img.animathabitat.org/02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.1.jpg" />
 
           </div>
 
           <div class="clear-center clear-bottom ptych-center ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.2.jpg" />
+            <img alt="" src="https://img.animathabitat.org/02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.2.jpg" />
 
           </div>
 
           <div class="clear-right clear-bottom ptych-right ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.3.jpg" />
+            <img alt="" src="https://img.animathabitat.org/02/art/aleksandr-rodchenko/1921.rodchenko.the-end-of-painting.3.jpg" />
 
           </div>
 
@@ -111,7 +111,7 @@
       </div>
 
       <div class="clear">
-        <img alt="" src="https://animathabitat.com/inc/img/~02/color/gamblin.studionotes.min.mod10.jpg" />
+        <img alt="" src="https://img.animathabitat.org/02/color/gamblin.studionotes.min.mod10.jpg" />
         <p class="gutter-side text-right">Classical colors, Impressionist colors, Modern colors &copy; <a href="../../../url/com/gamblincolors/" rel="noopener" target="_blank" title="Gamblin">Gamblin</a></p>
 
       </div>
@@ -126,17 +126,17 @@
       <div class="clear">
         <div class="clear ptych-center triptych ptych-fixed" class="bg-white">
           <div class="clear-left clear-bottom ptych-left ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/color/gamblin.old-masters-palette.300x228.jpg" />
+            <img alt="" src="https://img.animathabitat.org/02/color/gamblin.old-masters-palette.300x228.jpg" />
 
           </div>
 
           <div class="clear-center clear-bottom ptych-center ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/color/gamblin.impressionists-palette.300x231.jpg" />
+            <img alt="" src="https://img.animathabitat.org/02/color/gamblin.impressionists-palette.300x231.jpg" />
 
           </div>
 
           <div class="clear-right clear-bottom ptych-right ptych-bottom">
-            <img alt="" src="https://animathabitat.com/inc/img/~02/color/gamblin.basic-high-key-palette.300x197.jpg" />
+            <img alt="" src="https://img.animathabitat.org/02/color/gamblin.basic-high-key-palette.300x197.jpg" />
 
           </div>
 
@@ -175,17 +175,17 @@
       <div class="clear">
         <div class="clear ptych-center triptych ptych-fixed">
           <div class="clear-left clear-bottom ptych-left">
-            <img alt="Gamblin Artist Oil Color &ndash; Quinacridone Magenta" src="https://animathabitat.com/inc/img/~02/color/gamblin.artist-oil-color.quinacridone-magenta.jpg" />
+            <img alt="Gamblin Artist Oil Color &ndash; Quinacridone Magenta" src="https://img.animathabitat.org/02/color/gamblin.artist-oil-color.quinacridone-magenta.jpg" />
 
           </div>
 
           <div class="clear-center clear-bottom ptych-center">
-            <img alt="Gamblin Artist Oil Color &ndash; Cadmium Lemon" src="https://animathabitat.com/inc/img/~02/color/gamblin.artist-oil-color.cadmium-lemon.jpg" />
+            <img alt="Gamblin Artist Oil Color &ndash; Cadmium Lemon" src="https://img.animathabitat.org/02/color/gamblin.artist-oil-color.cadmium-lemon.jpg" />
 
           </div>
 
           <div class="clear-right clear-bottom ptych-right">
-            <img alt="Gamblin Artist Oil Color &ndash; Cobalt Teal" src="https://animathabitat.com/inc/img/~02/color/gamblin.artist-oil-color.cobalt-teal.jpg" />
+            <img alt="Gamblin Artist Oil Color &ndash; Cobalt Teal" src="https://img.animathabitat.org/02/color/gamblin.artist-oil-color.cobalt-teal.jpg" />
 
           </div>
         </div>
